Added in more test to screens.

--- a/PinDecoder/Views/InfoPage.xaml
+++ b/PinDecoder/Views/InfoPage.xaml
@@ -13,22 +13,13 @@
 
         <ScrollView Grid.Row="1">
             <StackLayout Orientation="Vertical" Padding="16,40,16,40" Spacing="10">
-                <Label FontSize="22">
-                    <Label.FormattedText>
-                        <FormattedString>
-                            <FormattedString.Spans>
-                                <Span Text="AppName" FontAttributes="Bold" FontSize="22" />
-                                <Span Text=" " />
-                                <Span Text="1.0" ForegroundColor="{StaticResource LightTextColor}" />
-                            </FormattedString.Spans>
-                        </FormattedString>
-                    </Label.FormattedText>
-                </Label>
                 <Label>
                     <Label.FormattedText>
                         <FormattedString>
                             <FormattedString.Spans>
-                                <Span Text="This app is written by RedBlup to  demonstrate" />
+                                <Span Text="Injection molding parts, especially on a multi-cavity mold, it becomes necessary to serialize the products. In other words, uniquely identify the finished molded product in order to find out which cavity it came from. " />
+                                <Span Text=" " />
+                                <Span Text=" " />
                                 <Span Text=" " />
                                 <Span Text="Xamarin Platform" FontAttributes="Bold" />
                                 <Span Text="." />
