* Pin.cs: Added in descriptions
* InfoPage.xaml:
* AboutPage.xaml:
* ConvertPage.xaml:
* PinCenterPage.xaml:
* ConvertPage.xaml.cs:
* PinCenterPage.xaml.cs:
* InfoViewModel.cs:
* AboutViewModel.cs:
* OrientationPinPage.xaml:
* ConvertViewModel.cs:
* PinCenterViewModel.cs:
* OrientationPinPage.xaml.cs:
* OrientationPinViewModel.cs:

Added new pages and text for the descriptions and
  then change buttons from code behind. Should be using databindings,
  but for now, use code behind.

--- a/PinDecoder/Views/MainPage.xaml
+++ b/PinDecoder/Views/MainPage.xaml
@@ -11,9 +11,9 @@
                 </OnPlatform>
             </NavigationPage.Icon>
         </NavigationPage>
-        <NavigationPage Title="Read">
+        <NavigationPage Title="Convert">
             <x:Arguments>
-                <views:AboutPage />
+                <views:ConvertPage />
             </x:Arguments>
             <NavigationPage.Icon>
                 <OnPlatform x:TypeArguments="FileImageSource">
