--- a/PinDecoder/Views/InfoPage.xaml
+++ b/PinDecoder/Views/InfoPage.xaml
@@ -18,11 +18,11 @@
                         <FormattedString>
                             <FormattedString.Spans>
                                 <Span Text="Injection molding parts, especially on a multi-cavity mold, it becomes necessary to serialize the products. In other words, uniquely identify the finished molded product in order to find out which cavity it came from. " />
-                                <Span Text=" " />
-                                <Span Text=" " />
-                                <Span Text=" " />
-                                <Span Text="Xamarin Platform" FontAttributes="Bold" />
-                                <Span Text="." />
+                                <Span Text="&#x0a;&#x0a;" />
+                                <Span Text="One option is to put numbers in the cavity. This requires a separate CNC program for every cavity, unless you can use insertable letters." />
+                                <Span Text="&#x0a;&#x0a;" />
+                                <Span Text="PinCoding" FontAttributes="Bold" />
+                                <Span Text=" allows the user to machine dots and then read them using this app. With only 8 pins, it's possible to code 255 different serial or cavity numbers." />
                             </FormattedString.Spans>
                         </FormattedString>
                     </Label.FormattedText>
@@ -31,16 +31,13 @@
                     <Label.FormattedText>
                         <FormattedString>
                             <FormattedString.Spans>
-                                <Span Text="It shares code with its" />
+                                <Span Text="This is a demo app the full app uses the camera." />
                                 <Span Text=" " />
-                                <Span Text="iOS, Android, and Windows" FontAttributes="Bold" />
-                                <Span Text=" " />
-                                <Span Text="versions." />
                             </FormattedString.Spans>
                         </FormattedString>
                     </Label.FormattedText>
                 </Label>
-                <Button Margin="0,10,0,0" Text="Learn more" Command="{Binding OpenWebCommand}" BackgroundColor="{StaticResource Primary}" TextColor="White" />
+                <Button Margin="0,10,0,0" Text="Picture" Command="{Binding OpenWebCommand}" BackgroundColor="{StaticResource Primary}" TextColor="White" />
             </StackLayout>
         </ScrollView>
 </ContentPage>
