--- a/PinDecoder/Views/InfoPage.xaml
+++ b/PinDecoder/Views/InfoPage.xaml
@@ -17,7 +17,7 @@
                     <Label.FormattedText>
                         <FormattedString>
                             <FormattedString.Spans>
-                                <Span Text="Injection molding parts, especially on a multi-cavity mold, it becomes necessary to serialize the products. In other words, uniquely identify the finished molded product in order to find out which cavity it came from. " />
+                                <Span Text="While injection molding parts, especially on a multi-cavity mold, it becomes necessary to serialize the products. In other words, uniquely identify the finished molded product in order to find out which cavity it came from. " />
                                 <Span Text="&#x0a;&#x0a;" />
                                 <Span Text="One option is to put numbers in the cavity. This requires a separate CNC program for every cavity, unless you can use insertable letters." />
                                 <Span Text="&#x0a;&#x0a;" />
@@ -37,7 +37,7 @@
                         </FormattedString>
                     </Label.FormattedText>
                 </Label>
-                <Button Margin="0,10,0,0" Text="Picture" Command="{Binding OpenWebCommand}" BackgroundColor="{StaticResource Primary}" TextColor="White" />
+                <Button Margin="0,10,0,0" Text="Picture" Command="{Binding PictPageCommand}" BackgroundColor="{StaticResource Primary}" TextColor="White" />
             </StackLayout>
         </ScrollView>
 </ContentPage>
